--- a/src/components/GetStarted/getstarted.css
+++ b/src/components/GetStarted/getstarted.css
@@ -7,7 +7,7 @@
     display: flex;
     color:white;
     width: 70%;
-    height: 40vh;
+    height: 70%;
     margin: 0 auto;
     border-radius: 10px;
     border: none;
@@ -24,7 +24,7 @@
    border: 2px solid white;
    margin-top: 20px;
 }
-@media (max-width:800px){
+@media screen and  (max-width:800px){
     .g-container{
         width: 100%;
         height: 70%;
